--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   rel="stylesheet">
   
   <link rel="icon" href="https://hosting.photobucket.com/images/i/sastaguvvu25/preloader_1.gif?width=320&height=320&fit=bounds">
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav class="navbar navbar-expand-md shadow mb-5 bg-light">
